--- a/Bonus_Connect_4/index.html
+++ b/Bonus_Connect_4/index.html
@@ -11,12 +11,28 @@
 <html>
 	<head>
 		<link rel="icon" href="Images/40percent.ico"/>
-		<link rel="stylesheet" type="text/css" href="Style.css" />
 		<title>Connect 4 Pixelated Edition</title>
+		
+		<style type="text/css">
+			body
+			{
+				margin:0px;
+				padding:0px;
+				text-align:center;
+			}
+
+			canvas
+			{
+				outline:0;
+				border:1px solid #000;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		</style>
 	</head>
 	
 	<body>
 		<canvas id="Canvas" width="400" height="400"></canvas>
-		<script src="con4.js"></script>
+		<script src="con4.js">Your browser does not support HTML5 Canvas</script>
 	</body>
 </html>
