Added video file

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 			<!--2 Minute Video setup using the html5 video player-->
 			<div class="bonus column1">
 				<h2>Bonus - Short Video</h2>
-				<video src="" width="400" height="400" 
-					controls="controls" preload="none">
+				<video width="400" height="400" 
+					controls="controls">
+					 <source src="video/bonusVideo.mp4" type="video/mp4" />
 				</video>
 			</div>
 			
