added details about connect 4

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				and javascript in order to allow integration into this page-->
 			<div class="bonus column2">
 				<h2>Connect Four</h2>
+				Please note, that the connect 4 is incomplete but the base of the program was setup and included.
 				<canvas id="Canvas" width="400" height="400"></canvas>
 				<script src="con4.js">Sorry, our browser does not support HTML5 Canvas </script>
 			</div>
